--- a/NewProject/src/app/login/login.component.html
+++ b/NewProject/src/app/login/login.component.html
@@ -1,38 +1,28 @@
-<body>
-  <div class="signin">
-    <div class="back-img">
-      <div class="sign-in-text">
-        <h2 class="active">Log In</h2>
-      </div>
-      <div class="layer">
-      </div>
-      <p class="point">&#9650;</p>
+<div style="padding-right: 40px;" class="login-wrapper">
+  <form action="" class="form">
+    <!-- <img ng-src= src="img/avatar.png" alt=""> -->
+    <h2>Login</h2>
+    <div class="input-group">
+      <input type="text" name="loginUser" id="loginUser" required>
+      <label for="loginUser">User Name</label>
     </div>
-    <div class="form-section">
-     
-      <form action="#">
-   
-        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-          <input  class="mdl-textfield__input" type="email" id="sample3" placeholder="Email">
-          <label style="padding-left: 10px;" class="mdl-textfield__label" for="sample3">Email</label>
-        </div>
-        <br/>
-        <br/>
-        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-          <input pattern=".{8,}"  class="mdl-textfield__input" type="password" id="sample3" placeholder="Password">
-          <label style="padding-left: 10px;" class="mdl-textfield__label" for="sample3">Password</label>
-        </div>
-        <br/>
-        <a href="#">Forgot Password ?</a>
-        <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox-1">
-        <input type="checkbox" id="checkbox-1" class="mdl-checkbox__input" checked>
-        <span class="keep-text mdl-checkbox__label">Keep me Signed In</span>
-      </label>
-      </form>
+    <div class="input-group">
+      <input type="password" name="loginPassword" id="loginPassword" required>
+      <label for="loginPassword">Password</label>
     </div>
-    
-    <button class="sign-in-btn mdl-button mdl-js-ripple-effect mdl-js-button mdl-button--raised mdl-button--colored">
-      Sign In
-    </button>
- </div>
-</body>
+    <input type="submit" value="Login" class="submit-btn">
+    <a href="#forgot-pw" class="forgot-pw">Forgot Password?</a>
+  </form>
+
+  <div id="forgot-pw">
+    <form action="" class="form">
+      <a href="#" class="close">&times;</a>
+      <h2>Reset Password</h2>
+      <div class="input-group">
+        <input type="email" name="email" id="email" required>
+        <label for="email">Email</label>
+      </div>
+      <input type="submit" value="Submit" class="submit-btn">
+    </form>
+  </div>
+</div>
