--- a/NewProject/src/app/login/login.component.scss
+++ b/NewProject/src/app/login/login.component.scss
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 body {
-  background: url('https://raw.githubusercontent.com/codeSTACKr/login-form/master/img/bg.jpg') no-repeat center;
+  background: url('../resource/acp_landing_page.png') no-repeat center;
   background-size: cover;
   font-family: sans-serif;
 }
@@ -12,9 +12,8 @@ body {
   height: 100vh;
   width: 100vw;
   display: flex;
-  justify-content: right;
+  justify-content: center;
   align-items: center;
-  padding-left: 200px;
 }
 .form {
   position: relative;
