--- a/NewProject/src/app/table/table.component.html
+++ b/NewProject/src/app/table/table.component.html
@@ -1,4 +1,36 @@
-<div class="container">
+<nav role="navigation">
+  <div id="menuToggle">
+    <!--
+    A fake / hidden checkbox is used as click reciever,
+    so you can use the :checked selector on it.
+    -->
+    <input type="checkbox" />
+    
+    <!--
+    Some spans to act as a hamburger.
+    
+    They are acting like a real hamburger,
+    not that McDonalds stuff.
+    -->
+    <span></span>
+    <span></span>
+    <span></span>
+    
+    <!--
+    Too bad the menu has to be inside of the button
+    but hey, it's pure CSS magic.
+    -->
+    <ul id="menu">
+      <a href="#"><li>Form</li></a>
+      <a><li>Add Form</li></a>
+    </ul>
+  </div>
+</nav>
+<div style="float: left; padding-left: 320px;">
+  <h1 >Form</h1> <br>
+</div><br>
+
+<div class="container" style="padding-left: 200px;padding-top: 100px;">
     <ul class="responsive-table">
       <li class="table-header">
         <div class="col col-1">Name</div>
