--- a/NewProject/src/app/login/login.component.html
+++ b/NewProject/src/app/login/login.component.html
@@ -1,28 +1,30 @@
-<div style="padding-right: 40px;" class="login-wrapper">
-  <form action="" class="form">
-    <!-- <img ng-src= src="img/avatar.png" alt=""> -->
-    <h2>Login</h2>
-    <div class="input-group">
-      <input type="text" name="loginUser" id="loginUser" >
-      <label for="loginUser">User Name</label>
-    </div>
-    <div class="input-group">
-      <input type="password" name="loginPassword" id="loginPassword" >
-      <label for="loginPassword">Password</label>
-    </div>
-    <input type="submit" value="Login" onclick="onSubmit()" class="submit-btn">
-    <a href="#forgot-pw" class="forgot-pw">Forgot Password?</a>
-  </form>
-
-  <div id="forgot-pw">
+<body>
+  <div style="padding-right: 40px;" class="login-wrapper">
     <form action="" class="form">
-      <a href="#" class="close">&times;</a>
-      <h2>Reset Password</h2>
+      <!-- <img ng-src= src="img/avatar.png" alt=""> -->
+      <h2>Login</h2>
       <div class="input-group">
-        <input type="email" name="email" id="email" required>
-        <label for="email">Email</label>
+        <input type="text" name="loginUser" id="loginUser" >
+        <label for="loginUser">User Name</label>
       </div>
-      <input type="submit" value="Submit" class="submit-btn">
+      <div class="input-group">
+        <input type="password" name="loginPassword" id="loginPassword" >
+        <label for="loginPassword">Password</label>
+      </div>
+      <input type="submit" value="Login" onclick="onSubmit()" class="submit-btn">
+      <a href="#forgot-pw" class="forgot-pw">Forgot Password?</a>
     </form>
-  </div>
-</div>
+  
+    <div id="forgot-pw">
+      <form action="" class="form">
+        <a href="#" class="close">&times;</a>
+        <h2>Reset Password</h2>
+        <div class="input-group">
+          <input type="email" name="email" id="email" required>
+          <label for="email">Email</label>
+        </div>
+        <input type="submit" value="Submit" class="submit-btn">
+      </form>
+    </div>
+  
+ 
